# nirmaan-mcp

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
nirmaan/: __init__.py  cli.py  mcp_server.py  plane_client.py
scripts/: smoke_test.py
tests/: test_mcp_server.py  test_plane_client.py
