[project]
name = "nirmaan-bot"
version = "0.1.0"
description = "Automation for Nirmaan (Plane) work item logging"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "mcp>=1.0.0",
]

[project.scripts]
nirm = "nirmaan.cli:main"
nbot = "nirmaan.cli:main"
nirmaan = "nirmaan.cli:main"
nirmaan-mcp = "nirmaan.mcp_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nirmaan*"]
